# features/orders/presentation/request/dto.go
@@ -2,41 +2,39 @@ package request
 
 import "project/e-comerce/features/orders"
 
-
-type Order struct{
+type Order struct {
 	//Price 	int 	`form:"price" json:"price"`
-	CartID 	[]int	`form:"cartid" json:"cartid"`
-	Address Address	`form:"address" json:"address"`
-	Payment Payment	`form:"payment" json:"payment"`
+	CartID  []int   `form:"cartid" json:"cartid"`
+	Address Address `form:"address" json:"address"`
+	Payment Payment `form:"payment" json:"payment"`
 }
 
-
-type Address struct{
-	City 		string 	`form:"city" json:"city"`
-	Province 	string	`form:"province" json:"province"`
-	PostalCode 	string	`form:"postalcode" json:"postalcode"`
-	Street 		string	`form:"street" json:"street"`
+type Address struct {
+	Receiver string `form:"city" json:"city"`
+	Phone    string `form:"province" json:"province"`
+	Address  string `form:"postalcode" json:"postalcode"`
 }
 
-type Payment struct{
-	PaymentName string	`form:"paymentname" json:"paymentname"`
-	NumberCard 	string	`form:"numbercard" json:"numbercard"`
-	PaymentCode string	`form:"paymentcode" json:"paymentcode"`
+type Payment struct {
+	PaymentName string `form:"paymentname" json:"paymentname"`
+	NumberCard  string `form:"numbercard" json:"numbercard"`
+	PaymentCode string `form:"paymentcode" json:"paymentcode"`
 }
 
-func ToCore(reqData Order)orders.Core{
+func ToCore(reqData Order) orders.Core {
 	return orders.Core{
-		//Price: reqData.Price,
 		Address: orders.AddressCore{
-			City: reqData.Address.City,
-			Province: reqData.Address.Province,
-			PostalCode: reqData.Address.PostalCode,
-			Street: reqData.Address.Street,
+			Receiver: reqData.Address.Receiver,
+			Phone:    reqData.Address.Phone,
+			Address:  reqData.Address.Address,
 		},
-		Payment: orders.PaymentCore{
-			PaymentName: reqData.Payment.PaymentName,
-			NumberCard: reqData.Payment.NumberCard,
-			PaymentCode: reqData.Payment.PaymentCode,
-		},
+	}
+}
+
+func ToPaymentCore(reqData Payment) orders.PaymentCore {
+	return orders.PaymentCore{
+		PaymentName: reqData.PaymentName,
+		NumberCard:  reqData.NumberCard,
+		PaymentCode: reqData.PaymentCode,
 	}
 }
